# echo-gateway

./: .env.example  .gitignore  ASYNCIO_FIXES.md  CONNECTION_FIXES.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUMMARY.md  Dockerfile  Eden.bat  Eden.ps1  Eden_Gateway_MCP_Server.code-workspace  GATEWAY_DEBUG.md  GATEWAY_FIX.md  IMPORT_FIXES_SUMMARY.md  LAUNCHER_README.md  README-GATEWAY.md  README.md  Taskfile.yml  Tasks.json  baseUrl.ts  canon_binding.json  claude-desktop.json  claude_desktop_config.json  eden_llm_context_bundle.js  eden_mcp_forge_bundle.js  eden_start.py  edenos_mcp_server_bundle.py  http_api.py  keys.json  memory_lane_supreme_chaosmode.js  next.config.ts  package-lock.json  package.json  permissions.json  pnpm-lock.yaml  requirements (2).txt  requirements.txt  run_mcp.bat  server.js  server.py  servers.txt
Build_Scripts/: cleanup-ports.bat  run_mcp_debug.txt  start_mcp_hub.ps1
CLEAN_STRUCTURE/: README.md  canon_binding.json
Configuration_Files/: example-config.json  mcp_hub_config.json
Documentation/: CHANGELOG.md  MCP_Server_full.md  README.md  UPGRADEME.me
JavaScript_MCP_Servers/: eden-universal-mcp.json  eden_context_window_mcp.js
MCP_Server_Hub/: mcp_server_hub.py
MCP_server/: README-GATEWAY.md  newkey.txt  package.json  permissions.json  pyproject.toml  run_mcp.ps1  run_mcp_debug.txt  server-gateway.js
MCP_server/config/: mcp-gateway.json
MCP_server/tools/: archive_tools.py  checksum_tool.py  filesystem_tools.py  git_inspect.py  permissions.json
NextJS_Application/: baseUrl.ts
Python_MCP_Servers/: mcp_hub_config.json  start_hub.py  (+3 more)
(+122 files in other folders)
