[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eden-mcp-server"
version = "0.1.0"
description = "EdenOS MCP bridge for local development"
authors = [ { name = "Dreamcatcher" } ]
requires-python = ">=3.8"
[project.optional-dependencies]
dev = ["rich==13.4.2"]
